# CreateLab

./: .gitignore  LICENSE  README.md  ROADMAP.md  skills-lock.json
data/: createlab.db
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  test.db
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: error.rs  hardware.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: arduino.rs  auth.rs  device.rs  mod.rs  repo.rs  sync.rs  workspace.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_TEMPLATES.md  SETUP.md
server/: .env  main.py  pyproject.toml  requirements.txt  test.db
server/app/: main.py
server/app/api/dependencies/: auth.py
server/app/api/models/: conversation.py  device.py  project.py  user.py  workspace.py
server/app/api/routes/: admin.py  ai.py  arduino.py  auth.py  devices.py  projects.py  sync.py  workspaces.py
server/app/api/schemas/: ai.py  auth.py  device.py  project.py  workspace.py
server/app/api/services/: ai_service.py  auth_service.py  device_service.py  project_service.py  sync_service.py  workspace_service.py
server/app/core/: config.py  database.py  events.py  security.py
server/app/projects/: calculator.py  fishing.py  platformer.py  robotics.py
server/app/workspaces/: scanner.py
server/createlab_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/data/: createlab.db
server/migrations/: env.py
server/scripts/: seed.py
server/tests/: conftest.py  test_admin.py  test_ai.py  test_arduino.py  test_auth.py  test_devices.py  test_models.py  test_projects.py  test_sync.py  test_workspaces.py
(+78 files in other folders)
