[package]
name = "createlab-desktop"
version = "0.1.0"
edition = "2021"
description = "CoreV2 Summer Camp Desktop Client"

[lib]
name = "createlab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "v5"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hostname = "0.4"
tracing = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
